# tw-stock-cli

./: .gitignore  README.md  crawler_common.py  crawler_utils.py  mops_balance_sheet.py  mops_cash_flow.py  mops_income_statement.py  mops_month_revenue.py  pyproject.toml  taifex_fcm_futures_volume_night.py  taifex_futures_institutional.py  taiwan_taifex_futures_daily.py  taiwan_taifex_futures_dealer_trading_volume_daily.py  taiwan_taifex_futures_dealer_trading_volume_daily_night.py  taiwan_taifex_futures_institutional_investors.py  taiwan_taifex_option_daily.py  taiwan_taifex_options_dealer_trading_volume_daily.py  taiwan_taifex_options_dealer_trading_volume_daily_night.py  taiwan_taifex_options_tick.py  taiwan_tpex_share_holding.py  taiwan_tpex_stock_institutional_investors_buy_sell.py  taiwan_tpex_stock_list.py  taiwan_tpex_stock_margin_purchase_short_sale.py  taiwan_tpex_stock_per.py  taiwan_tpex_stock_price.py  taiwan_tpex_total_return_Index.py  taiwan_twse_mops_balance_sheet.py  taiwan_twse_mops_cash_flows_statement.py  taiwan_twse_mops_financial_statements.py  taiwan_twse_mops_month_revenue.py  taiwan_twse_share_holding.py  taiwan_twse_stock_list.py  taiwan_twse_stock_margin_purchase_short_sale.py  taiwan_twse_stock_per.py  taiwan_twse_stock_price.py  tpex_foreign_holding.py  tpex_institutional_trade.py  tpex_margin_trade.py  tpex_stock_list.py  tpex_stock_price.py  (+6 more)
docs/: datasets.md  finmind-field-mapping.md
tests/: test_cli.py  test_common.py  test_live_smoke.py  test_registry.py  test_source_helpers.py
tw_stock_cli/: __init__.py  cli.py  registry.py
tw_stock_cli/crawlers/: __init__.py  common.py
tw_stock_cli/crawlers/mops/: __init__.py  annual_report_electronic_book.py  asset_acquisition_disposal.py  asset_acquisition_disposal_financial.py  balance_sheet.py  board_attendance_training.py  cash_flow.py  common.py  company_balance_sheet.py  company_basic_info.py  company_cash_flow.py  company_equity_changes.py  company_governance_structure.py  company_income_statement.py  director_supervisor_remuneration.py  dividend_distribution.py  electronic_book_common.py  employee_benefit_expense.py  employee_welfare_policy.py  endorsement_guarantee.py  esg_company_disclosure.py  ex_dividend_announcement.py  financial_report_electronic_book.py  full_time_employee_salary.py  functional_committee.py  fund_lending.py  income_statement.py  independent_director_profile.py  insider_holding_company_list.py  insider_holding_detail.py  insider_pledge_ratio_summary.py  insider_pledge_summary.py  insider_shareholding_change.py  insider_shareholding_detail.py  insider_transfer_common.py  insider_transfer_declaration_detail.py  insider_transfer_declaration_summary.py  insider_transfer_untransferred_detail.py  insider_transfer_untransferred_summary.py  investor_conference.py  (+14 more)
tw_stock_cli/crawlers/taifex/: __init__.py  common.py  fcm_futures_volume_day.py  fcm_futures_volume_night.py  fcm_options_volume_day.py  fcm_options_volume_night.py  futures_daily.py  futures_institutional.py  futures_tick.py  options_daily.py  options_tick.py
tw_stock_cli/crawlers/tpex/: __init__.py  common.py  foreign_holding.py  institutional_trade.py  margin_trade.py  stock_list.py  stock_price.py  stock_valuation.py  total_return_index.py
tw_stock_cli/crawlers/twse/: __init__.py  common.py  foreign_holding.py  institutional_trade.py  margin_trade.py  stock_list.py  stock_price.py  stock_valuation.py  total_return_index.py
