[project]
name = "tw-stock-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "brotli",
    "html5lib",
    "loguru",
    "lxml",
    "pandas",
    "pandas-datareader",
    "python-dateutil",
    "requests",
    "tqdm",
]

[project.scripts]
tw-stock = "tw_stock_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "crawler_common",
    "taifex_futures_daily",
    "taifex_fcm_futures_volume_day",
    "taifex_fcm_futures_volume_night",
    "taifex_futures_institutional",
    "taifex_futures_tick",
    "taifex_options_daily",
    "taifex_fcm_options_volume_day",
    "taifex_fcm_options_volume_night",
    "taifex_options_tick",
    "tpex_foreign_holding",
    "tpex_institutional_trade",
    "tpex_stock_list",
    "tpex_margin_trade",
    "tpex_stock_valuation",
    "tpex_stock_price",
    "tpex_total_return_index",
    "mops_balance_sheet",
    "mops_cash_flow",
    "mops_income_statement",
    "mops_month_revenue",
    "twse_foreign_holding",
    "twse_institutional_trade",
    "twse_stock_list",
    "twse_margin_trade",
    "twse_stock_valuation",
    "twse_stock_price",
    "twse_total_return_index",
]

[tool.setuptools.packages.find]
include = ["tw_stock_cli*"]
