[project]
name = "tw-stock-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "brotli",
    "html5lib",
    "loguru",
    "lxml",
    "pandas",
    "pandas-datareader",
    "python-dateutil",
    "requests",
    "tqdm",
]

[project.scripts]
tw-stock = "tw_stock_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tw_stock_cli*"]
